@@ -1,6 +1,5 @@
 package umc.teamc.youthStepUp.global.config;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import org.springframework.context.annotation.Bean;
@@ -14,8 +13,8 @@ public class CorsConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://youthstepup.site",
-                "https://p4pzs8nr-5173.asse.devtunnels.ms"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "https://youthstepup.site",
+                "https://p4pzs8nr-5173.asse.devtunnels.ms", "https://api.youthstepup.site"));
         configuration.setAllowedMethods(Collections.singletonList("*")); //모든 요청 메서드를 허용
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
